app/k3s-system/argocd/install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
